[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tomato-disease-detection"
version = "1.0.0"
description = "Tomato Leaf Disease Detection using ViTAgriNet"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "timm==0.9.12",
    "Pillow==11.0.0",
    "numpy==1.24.3",
    "python-dotenv==1.0.0",
    "gunicorn==21.2.0",
]
